--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,18 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#667eea" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Online Tuition Platform - Learn from expert tutors anywhere, anytime. Personalized online education for students of all ages."
     />
+    <meta name="keywords" content="online tuition, education, learning, tutors, students, subjects, homework help" />
+    <meta name="author" content="Online Tuition Platform" />
+    <meta property="og:title" content="Online Tuition Platform" />
+    <meta property="og:description" content="Learn from expert tutors anywhere, anytime. Personalized online education for students of all ages." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-domain.com" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Online Tuition Platform - Learn from Expert Tutors</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
